 * client Changes
  * OpenM_RESTControllerClient_JSONLocalServer no manage properly call exception
    by using OpenM_ServiceSSOClientImpl. return JSON error with generated error.
 
 * adds
  * OpenM-Services.gui.OpenM_ServiceClientJSGeneratorServer generate API
    JavaScript client (manage synchornous and asynchronous calling) to call
    api from javascript (has to be used with a OpenM_RESTControllerClient_JSONLocalServer).

 * libraries Changes
  * update util to 1.0.13 version
  * update openid by name version 2.0.2001 to be compliant with util 1.0.13 
    new conflict management version