@@ -1,5 +1,5 @@
-OpenM_ID.api.path=http://gsaunier.users.dev.open-miage.org/open-miage-id-api-impl/http/
+OpenM_ID.api.path=http://openm-id.example.open-miage.org/
 OpenM_ID.store.path=./store
-OpenM_SSO.api.path=http://gsaunier.users.dev.open-miage.org/open-miage-book-api-impl/http/
+OpenM_SSO.api.path=http://book.remote.dev.open-miage.org/
 OpenM_SSO.api.name=OpenM_Book
 OpenM_SSO.pool.session.name=OpenM-SSO_Book
