@@ -6,6 +6,9 @@
   * OpenM-Services.gui.OpenM_ServiceClientJSGeneratorServer generate API
     JavaScript client (manage synchornous and asynchronous calling) to call
     api from javascript (has to be used with a OpenM_RESTControllerClient_JSONLocalServer).
+  * OpenM-ID.client.OpenM_IDLoginClientServer is a OpenM-ID server Proxy
+    with JavaScript client: OpenM-ID.gui.js.OpenM_IDLoginClient to connect with OpenM-ID
+    and reconnect on connection lost.
 
  * libraries Changes
   * update util to 1.0.13 version
